<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Used Selector from https://stackoverflow.com/questions/18074303/how-to-create-custom-shape-button-with-selector-in-android -->
    <!-- https://developer.android.com/develop/ui/views/components/togglebutton-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6D4F0"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/display_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Map Display:" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/display_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="Mood History"
                android:textOn="Mood Following"
                android:textColor="@color/raisin_black"
                android:textSize="10.5sp"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/filter_mood_history"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_mood_history"
                android:src="@drawable/ic_mood_history"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mood History"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/filter_mood_following"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_mood_following"
                android:src="@drawable/ic_mood_following"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mood Following"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/filter_5_km_radius"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_5km_radius"
                android:src="@drawable/ic_5km_radius"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 KM Radius"
                android:textSize="10sp"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>